<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="308dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/text_identifiant"
        android:inputType="text"
        android:textColor="@color/red"
        android:textColorHint="@color/gray"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="157dp"
        android:layout_height="142dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo_sans_fond" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="316dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/text_mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/red"
        android:textColorHint="@color/gray"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#A00002"
        android:text="@string/btn_connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>