<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#E6F1F3"
    tools:context=".NewPatient">

    <ScrollView
        android:layout_width="391dp"
        android:layout_height="720dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="217dp"
                android:layout_height="139dp"
                android:contentDescription="@string/image_de_prise_d_information"
                app:srcCompat="@drawable/kindpng_349209" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Enter le nom"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNom"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/nom_patient"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="25"
                app:endIconMode="clear_text"
                app:helperText="Enter le prenom"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPrenom"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/prenom_patient_hint"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Enter l'année de naissance"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextdob"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/date_de_naissance_patient_hint"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="Enter le sexe"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSexe"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/sexe_patient_hint"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Situation Matrimoniale"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSituation"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/situation_matrimoniale_patient_hint"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="Enter le Contact"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextContact"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/telephone_hint"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Enter occupation"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextOccupation"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/occupation_hint"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Enter le Pays"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPays"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:hint="@string/pays_hint"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:endIconMode="clear_text"
                app:helperText="Enter la ville"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVille"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/ville_hint"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonEnregistrer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Enregister" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>